--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,10 +19,16 @@ android {
     }
 }
 
+repositories {
+    jcenter()
+    maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
+}
+
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:22.2.0'
     compile 'com.google.android.gms:play-services:7.8.0'
 
     compile 'com.jakewharton:butterknife:7.0.1'
+    compile 'com.michaelpardo:activeandroid:3.1.0-SNAPSHOT'
 }
