--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,11 +13,25 @@
 
     <uses-permission android:name="com.pid2.tata.permission.C2D_MESSAGE" />
 
+    <!-- adjust the name property of your application node name="com.activeandroid.app.Application" -->
     <application
+        android:name="com.activeandroid.app.Application"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
+
+        <!-- add the following metadata for version and database name -->
+        <meta-data
+            android:name="AA_DB_NAME"
+            android:value="ElTata.db" />
+        <meta-data
+            android:name="AA_DB_VERSION"
+            android:value="1" />
+	    <meta-data
+		    android:name="AA_MODELS"
+		    android:value=".db.PacienteModel, .db.ReporteModel" />
+
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name" >
@@ -46,6 +60,7 @@
 
         <activity
             android:name=".ui.DetallesReporteActivity"
+            android:clearTaskOnLaunch="true"
             android:label="@string/title_activity_detalles_reporte" >
         </activity>
     </application>
