--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,18 +28,13 @@
         <meta-data
             android:name="AA_DB_VERSION"
             android:value="1" />
-	    <meta-data
-		    android:name="AA_MODELS"
-		    android:value=".db.PacienteModel, .db.ReporteModel" />
+        <meta-data
+            android:name="AA_MODELS"
+            android:value=".db.PacienteModel, .db.ReporteModel" />
 
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
 
         <receiver
@@ -62,6 +57,15 @@
             android:name=".ui.DetallesReporteActivity"
             android:clearTaskOnLaunch="true"
             android:label="@string/title_activity_detalles_reporte" >
+        </activity>
+        <activity
+            android:name=".ui.ElTataMainActivity"
+            android:label="@string/title_activity_el_tata_main" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
     </application>
 
